--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-astropy==5.2.2
-celluloid==0.2.0
-flax==0.6.8
-h5py==3.6.0
-overrides
-phoebe==2.4.9
+astropy~=5.2.2
+celluloid~=0.2.0
+flax~=0.6.8
+h5py~=3.6.0
+overrides~=7.4.0
+phoebe~=2.4.9ß
