--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ dependencies = [
     "jaxlib~=0.4.24",
     "numpy~=1.26.4",
     "flax~=0.8.1",
-    "joblib~=1.3.2"
+    "joblib~=1.3.2",
+    "transformer-payne~=0.1"
 ]
 
 [project.optional-dependencies]
