--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools >= 61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "spice"
+name = "stellar-spice"
 version = "0.1"
 readme = "README.md"
 dependencies = [
