--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,3 +30,4 @@ python_classes = ["Test", "Describe"]
 python_functions = ["test_", "it_", "and_", "but_", "they_"]
 python_files = ["test_*.py",]
 testpaths = ["tests",]
+pythonpath = ["src"]
