--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "stellar-spice"
-version = "0.2-beta"
+version = "0.2"
 readme = "README.md"
 dependencies = [
     "jax~=0.4.24",
