Add documentation and checks

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ version = "1.0"
 readme = "README.md"
 dependencies = [
     "celluloid~=0.2.0",
+    "chex~=0.1.88",
+    "jaxtyping~=0.2.36",
     "jax~=0.4.24",
     "jaxlib~=0.4.24",
     "numpy~=1.26.4",
