--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
 astropy~=5.2.2
 celluloid~=0.2.0
+chex~=0.1.88
+jax~=0.4.24
+jaxlib~=0.4.24
+jaxtyping~=0.2.36
 flax~=0.6.8
 overrides~=7.4.0
 phoebe~=2.4.9
