--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,16 +4,16 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "stellar-spice"
-version = "1.2.1"
+version = "1.2.2"
 readme = "README.md"
 dependencies = [
     "celluloid~=0.2.0",
     "chex~=0.1.88",
     "jaxtyping~=0.2.36",
-    "jax>=0.5.1",
-    "jaxlib>=0.5.1",
+    "jax~=0.4.24",
+    "jaxlib~=0.4.24",
     "numpy~=1.26.4",
-    "flax>=0.10.5",
+    "flax~=0.8.1",
     "joblib~=1.3.2",
     "transformer-payne~=0.5"
 ]
