--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "stellar-spice"
-version = "1.5.6"
+version = "1.5.7"
 readme = "README.md"
 dependencies = [
     "autofig~=1.2.0",
@@ -18,12 +18,13 @@ dependencies = [
     "flax>=0.10.4",
     "joblib~=1.3.2",
     "transformer-payne~=0.9",
-    "phoebe~=2.4.17"
+    "h5py~=3.13.0"
 ]
 
 [project.optional-dependencies]
 huggingface = ["huggingface-hub~=0.21.3"]
 dev = ["pytest~=8.0.0", "pytest-datadir~=1.5.0", "coverage~=7.4.3"]
+phoebe = ["phoebe~=2.4.17"]
 
 [tool.setuptools.dynamic]
 dependencies = {file = ["requirements.txt"]}
