Add jaxkd+skip existing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "cmasher~=1.9.2",
     "jaxtyping~=0.2.36",
     "jax>=0.4.38",
+    "jaxkd>=0.1.2",
     "jaxlib>=0.4.38",
     "numpy~=1.26.4",
     "overrides~=7.7.0",
