Remove txt and csv files from tracking and add to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,11 @@ tutorial/paper_results/results/tutorial/paper_results/
 .cache/
 *.pkl
 *.pickle
+*.txt
+*.csv
+*.txt
+*.csv
+*.txt
+*.csv
+*.txt
+*.csv
